--- a/app/src/main/res/layout/dialog_alphabet_detail.xml
+++ b/app/src/main/res/layout/dialog_alphabet_detail.xml
@@ -2,9 +2,9 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/dialog_rounder"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/dialog_rounder">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,25 +14,20 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
             android:layout_weight="1"
+            android:background="@drawable/dialog_rounder"
             android:gravity="center"
             android:orientation="horizontal">
 
 
             <pl.droidsonroids.gif.GifImageView
                 android:id="@+id/alphabet_cardview_tv_hira1"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginRight="32dp"
-                android:background="@drawable/dialog_rounder" />
-
-            <pl.droidsonroids.gif.GifImageView
-                android:id="@+id/alphabet_cardview_tv_kata1"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/dialog_rounder" />
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center" />
 
 
         </LinearLayout>
@@ -41,53 +36,52 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_weight="1"
             android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/alphabet_cardview_tv_roma"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:background="@drawable/dialog_rounder"
-                android:gravity="center"
-                android:padding="8dp"
-                android:text="ma"
-                android:textColor="#FD0303"
-                android:textSize="32sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/alphabet_cardview_img_pronun"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="32dp"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:src="@drawable/ic_volume_up_black_24dp" />
 
-            <TextView
-                android:id="@+id/alphabet_cardview_tv_ok"
+            <Button
+                android:paddingRight="8dp"
+                android:paddingLeft="4dp"
+                android:background="@drawable/btn_dialog_rounder"
+                android:id="@+id/alphabet_btnTapViet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_weight="1"
+                android:layout_marginLeft="32dp"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center"
-                android:text="OK"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="24sp" />
+                android:textAllCaps="false"
+                android:text="@string/tap_viet"
+                android:textColor="@android:color/white"
+                android:textSize="24sp"
+                android:drawableLeft="@drawable/a" />
         </LinearLayout>
-
-
+        <View
+            android:layout_marginTop="32dp"
+            android:background="@color/colorHr"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+        <TextView
+            android:id="@+id/alphabet_cardview_tv_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="OK"
+            android:textColor="@color/colorBlue"
+            android:textSize="24sp" />
     </LinearLayout>
 </LinearLayout>
