--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,15 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlue">#0253B3</color>
+    <color name="colorGreen">#4FB94C</color>
+    <color name="colorHr">#707070</color>
+    <color name="bgBlue">#EFF2F4</color>
+    <color name="color_btn_Blue">#18A4E0</color>
+    <color name="white">#fff</color>
+    <color name="black">#000</color>
+    <color name="bgTranslate">#EFF2F4</color>
+    <color name="colorPink">#FD7773</color>
+    <color name="bgYellow">#EDB733</color>
+    <color name="textGray">#82858C</color>
+
 </resources>
